# GRC_SC

./: .env.production.example  .env.production.template  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  ACCESSING_INCIDENT_RESPONSE_PAGE.md  AI_ASSET_COMMIT_STEP3B_DESIGN.md  AI_ASSET_EXTRACTOR_STEP3_DESIGN.md  AI_CANONICAL_WORKFLOW_DICTIONARY.md  AI_CASE_INTAKE_JSON_CONTRACT.md  AI_CASE_INTAKE_STEP1_ENDPOINT_DESIGN.md  AI_CASE_SETUP_STEP2_DESIGN.md  AI_GOVERNANCE_MODULE_COMPLETE.md  ARABIC_CONVERSION_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  ASSESSMENT_EXECUTION_IMPLEMENTATION.md  ATTESTATION.md  CHANGELOG.md  CI_DISK_SPACE_FIX.md  CI_TIMEOUT_FIX.md  CODESPACES_GUIDE.md  CODESPACE_FINAL_FIX.md  CODESPACE_FIX.md  CODESPACE_SETUP_SUMMARY.md  COMMERCIAL_PRODUCT_GUIDE.md  COMPLETE_CONTROL_LIBRARIES_INTEGRATION.md  COMPLETE_FIX_SUMMARY.md  CONTAINER_SECURITY_GUIDE.md  CONTAINER_SECURITY_QUICK_REF.md  CONTRIBUTING.md  CONTROL_EDIT_IMPLEMENTATION.md  CONTROL_LIBRARY.html  CONTROL_LIBRARY_AR.html  CONTROL_LIBRARY_DEMO.html  DAILY_PROGRESS_REPORT_2026-02-16.md  DATABASE_README.md  DEMO_AR.html  DEPLOYMENT.md  (+103 more)
.devcontainer/: README.md  WELCOME.txt  devcontainer.json  docker-compose.yml  quick-start.sh  setup-background.sh  setup.sh  show-welcome.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  codespace.yml  security-quality.yml  security-scan.yml  security-scanning.yml
ai/: README.md  __init__.py  requirements.txt
ai/model_registry/: __init__.py  registry.py
ai/rag/: __init__.py  bilingual_retriever.py  chunker.py  config.yaml  control_loader.py
ai/security/: __init__.py  ai_security.py  citation_validator.py
backend/: pyproject.toml
backend/ai_onboarding/: __init__.py  applied_control_commit_guardrails.py  applied_control_commit_serializers.py  applied_control_commit_service.py  applied_control_suggestion_guardrails.py  applied_control_suggestion_provider.py  applied_control_suggestion_serializers.py  applied_control_suggestion_service.py  asset_commit_guardrails.py  asset_commit_serializers.py  asset_commit_service.py  asset_suggestion_guardrails.py  asset_suggestion_provider.py  asset_suggestion_serializers.py  asset_suggestion_service.py  case_intake_guardrails.py  case_intake_provider.py  case_intake_serializers.py  case_intake_service.py  case_setup_guardrails.py  case_setup_serializers.py  case_setup_service.py  data_loader.py  evidence_finding_commit_guardrails.py  evidence_finding_commit_serializers.py  evidence_finding_commit_service.py  evidence_finding_suggestion_guardrails.py  evidence_finding_suggestion_provider.py  evidence_finding_suggestion_serializers.py  evidence_finding_suggestion_service.py  file_discovery.py  framework_recommender.py  (+12 more)
config/: env.example  settings.yaml
data/: README.md
db-backup-sqlite-20260312-103213/: ciso-assistant.sqlite3-shm  ciso-assistant.sqlite3-wal  huey.db  huey.db-shm  huey.db-wal
deployment/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
docs/: ADMIN_USER_GUIDE.md  ANALYSIS_SUMMARY.md  CI-CD-SECURITY.md  DATABASE_MIGRATIONS.md  ENTERPRISE_BUILD_SUMMARY.md  FINAL_SUMMARY.md  HTTP_405_FIX_GUIDE.md  HTTP_405_REMEDIATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MERGE_CONFLICT_IMPLEMENTATION_SUMMARY.md  MERGE_RESOLUTION_SUMMARY.md  OPERATIONS_RUNBOOK.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PHASE_2.3_IMPLEMENTATION_COMPLETE.md  PHASE_2.4_IMPLEMENTATION_PROGRESS.md  PHASE_A_B_IMPLEMENTATION_COMPLETE.md  PHASE_A_B_IMPLEMENTATION_COMPLETE_AR.md  PHASE_A_IMPLEMENTATION_SUMMARY.md  PLATFORM_ORGANIZATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_100_PERCENT.md  PROJECT_ANALYSIS.md  README.md  SECURITY-BEST-PRACTICES.md  SECURITY-QUICK-START.md  SECURITY_PIPELINE.md  SYSTEM_VALIDATION.md  TESTING_GUIDE.md
frontend/: Dockerfile  ciso-theme.css  package-lock.json  package.json  vite.config.ts
packs/: README.md
playbooks/: README.md
reporting/: README.md
sanadcom/: CRUD_ENDPOINTS_FIX.py  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.txt  FULL_DEMO.html  LAUNCH_COMPLETE_SUMMARY.md  PLATFORM_ACCESS_GUIDE.md  PROFESSIONAL_PLATFORM_GUIDE.md  deploy-launch.sh  index.html  launch_sico_grc.ps1  start-dev.ps1  test_serialization.py
scripts/: README.md  build_rag_index.py  check_conflicts.sh  create_test_db.py  export_portable.py  generate-attestation.py  generate_security_keys.ps1  load_complete_controls.py  load_comprehensive_data.py  load_data_direct.py  load_enterprise_demo.py  load_more_data.py  load_nca_controls.py  load_official_nca_controls.py  load_sample_data.py  load_sample_evidence.py  production_readiness_validation.py  production_setup.py  quick-start.sh  run-alembic-migrations.ps1  run-alembic-migrations.sh  setup.sh  setup_git_config.sh  test-evidence-approval-setup.js  test_phase_2.1.sh  validate_deployment.py  validate_system.ps1  validate_system.sh
soc-grc-bridge/: README.md  incident-control-matrix.yaml
src/: README.md  __init__.py
tests/: README.md  conftest.py  helpers.py  test_api.py  test_performance.py
(+583 files in other folders)
